# llm-parliament

./: .gitignore  README.md  pyproject.toml  start.sh
backend/: config.py  debate_graph.py  main.py  openrouter.py  state.py  storage.py  test_tool_flow.py  tools.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  DebateMessage.css  DebateMessage.jsx  Sidebar.css  Sidebar.jsx
